workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_add_shape_parameter__unexisting_shape_id_result.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: unexisting_shape_id_result.unwrap_err()
---
Validation(
    "Command failed validation: shape must exist to add shape parameter, \"AddShapeParameter(AddShapeParameter { shape_parameter_id: \\\"shape_parameter_2\\\", shape_id: \\\"not-a-shape\\\", name: \\\"\\\" })\"",
)
